Categories are shown

--- a/Web.config
+++ b/Web.config
@@ -21,4 +21,7 @@
       </namespaces>
     </pages>
   </system.web.webPages.razor>
+	<connectionStrings>
+		<add name="MyConnectionString" connectionString="Data Source=localhost;Initial Catalog=dnndev;User ID=dnn-dev;Password=KinizsiKoli123!;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
