SQL provider reworked. Model,View,Controller reworked. Design implemented. JS code written. Happy DNN-ing happened.

--- a/MenuModul.csproj
+++ b/MenuModul.csproj
@@ -156,6 +156,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\index.js" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
